--- a/content/post/20190319-lean.md
+++ b/content/post/20190319-lean.md
@@ -52,7 +52,7 @@ The creator of a distributed blockchain application (DApp) does not need to expe
 
 In fact, large-scale production DApps can be built with as little as one or two smart contracts and a frontend application using a Javascript runtime like Nodejs.
 
-One such DApp example is the Uniswap Exchange Protocol. It consists of two Vyper smart contracts and a simple, yet elegant, frontend application. DApps like Uniswap are dubbed zero-infrastructure because:
+One such DApp example is the Uniswap Exchange Protocol. It consists of two [Vyper smart contracts](https://github.com/Uniswap/contracts-vyper/tree/master/contracts) and a simple, yet elegant, [frontend application](https://github.com/Uniswap/uniswap-frontend). DApps like Uniswap are [dubbed zero-infrastructure](https://twitter.com/thomaspower/status/1069684475775336448) because:
 
 * transactions are all performed on chain, in real time
 * users are not required to log in whatsoever
@@ -135,13 +135,13 @@ The smart contract’s idempotent nature, combined with the underlying blockchai
 
 Sporting franchises may find this appealing due to the zero infrastructure approach — a potential savings in IT infrastructure.
 
-Local, grassroots event organizers may want to test and measure the viability of an open air concert, using the smart contract’s logic as a platform for crowd-funding. A base template for this idea (smart contract code) can be found here.
+Local, grassroots event organizers may want to test and measure the viability of an open air concert, using the smart contract’s logic as a platform for crowd-funding. A base template for this idea (smart contract code) can be [found here](https://github.com/CyberMiles/smart_contracts/blob/master/EventTicketSales/ticket.lity).
 
 ![CC BY 4.0. Source: https://en.m.wikipedia.org/wiki/File:Godiva_2016_Crowd_Shot.jpg](/images/20190319-lean-03.jpg)
 
 ### 2. Public online games
 
-Most traditional online games work using an intermediary to set up the communication and ensure that everything works correctly. In a blockchain game implementation, no party can shut down the service, cheat, or run away with any money. If designed correctly, the system is uncheatable [1].
+Most traditional online games work using an intermediary to set up the communication and ensure that everything works correctly. In a blockchain game implementation, no party can shut down the service, cheat, or run away with any money. If designed correctly, the system is uncheatable.
 
 It makes little sense to have a single point of failure (i.e. centralized intermediary) in a system where all participants are equal (ex. individuals in a peer-to-peer gaming ecosystem).
 
