--- a/content/post/20190419-edcon.md
+++ b/content/post/20190419-edcon.md
@@ -90,11 +90,11 @@ The rules engine provides modularity. This is an important feature because a lar
 
 ![](/images/20190419-edcon-06.jpg)
 
-Dr Yuan gave many examples of the usefulness of rules engines. Perhaps the simplest to articulate, in this article, was the semi-complex fast food order in which, after some time, individual items on the menu begin to qualify as becoming part of a "combo". Naturally, the procedural smart contract code to satisfy complex rules is lengthy, as well as, difficult to write and comprehend. 
+Dr Yuan gave many examples of the usefulness of rules engines. Perhaps the simplest to articulate, in this article, was the semi-complex fast food order in which, after some time, individual items on the menu begin to qualify as becoming part of a "combo". Naturally, without the Rules Engine, the traditional smart contract code would be lengthy; difficult to write and comprehend. As you can see from the image below, the rules syntax is quite simple.
 
 ![](/images/20190419-edcon-07.jpg)
 
-The rules engine provides a succinct solution (for non-programmers) which is easy to write, comprehend and maintain. The rules engine is robust, once deployed, the rules engine employs the Rete algorithm; a pattern matching algorithm which is used to determine the correct order of rule execution.
+The rules engine provides a succinct solution (for non-programmers) which is easy to write, comprehend and maintain. The rules engine is robust. Once deployed, the rules engine employs the Rete algorithm; a pattern matching algorithm which is used to determine the correct order of rule execution.
 
 ### Ethereum community collaboration
 
@@ -102,7 +102,7 @@ I was fortunate enough to sit with Hayden Adams (the creator of Uniswap) and dis
 
 ![](/images/20190419-edcon-08.jpg)
 
-The logic behind this idea is as follows. A single uint256 data slot can store any value between 0 and 115792089237316195423570985008687907853269984665640564039457584007913129639935 and as such it may be feasible to create a pattern which obeys a certain convention which ultimately allows many application variables to be stored in one single slot. The pseudo code (design pattern) for the idea, which I have dubbed "[micro-slots]"(https://github.com/second-state/micro-slots) is shown below.
+The logic behind this idea is as follows. A single uint256 data slot can store any value between 0 and 115792089237316195423570985008687907853269984665640564039457584007913129639935 and as such it may be feasible to create a pattern which obeys a certain convention which ultimately allows many application variables to be stored in one single slot. The pseudo code (design pattern) for the idea, which I have dubbed [micro-slots](https://github.com/second-state/micro-slots) is shown below.
 
 ```
 ((_value % (10 ** _position)) - (_value % (10 ** (_position - _size)))) / (10 ** (_position - _size));
@@ -139,7 +139,7 @@ I am hopeful that this design may be useful for Uniswap version 2.0 and as such 
 
 There were so many amazing presenters, teams and projects at this conference. Just before we conclude, I would like to quickly mention a couple of projects as well as an idea; all of which I found inspirational and interesting.
 
-#### embark
+#### Embark
 
 Originally released in 2015, [Embark](https://embark.status.im/) is an Ethereum development framework which provides developers with the ability to create private blockchains, debug smart contracts and much more. From my understanding "Embark saves time". Embark has a powerful CLI, a web UI dashboard, an explorer, its own code editor, and also integrates with decentralized services such as IPFS. Embark is a **fully open source effort**, created for developers, by developers. 
 
@@ -149,7 +149,7 @@ Ethereum Classic Labs gave a great presentation which introduced me to a clever 
 
 #### Virgil Griffith - Parametric insurance (insurance based on a measurable condition)
 
-The Special Projects Lead at the Ethereum Foundation, Virgil Griffith, gave a great talk about decentralized insurance protocols and products. Virgil gave examples of how real-world outcomes could automatically invoke payment. One example was weather insurance whereby the purchaser of the insurance policy will automatically receive an insurance payout based on a simple metric such as wind speed. For example instant payouts are triggered when the wind speed registered by weather stations in proximity to the insured property exceed a threshold. 
+The Special Projects Lead at the Ethereum Foundation, Virgil Griffith, gave a great talk about decentralized insurance protocols and products. Virgil gave examples of how real-world outcomes could automatically invoke payment. One example was weather insurance whereby the purchaser of the insurance policy would automatically receive an insurance payout based on a simple metric such as wind speed. For example instant payouts are triggered when the wind speed registered by weather stations (in proximity to the insured property) exceed a threshold. 
 
 > No insurance assessors and no delays. 
 
@@ -159,7 +159,7 @@ Another example was that of flight delay insurance whereby a payout is issued ba
 
 This particular talk made me revisit Dr Yuan's presentation about the blockchain Rules Engine. In his talk Dr Yuan gave the example of how the Rules Engine could resolve complex issues such as accounting for rewards in complex situations. For example a passenger achieving Gold frequent-flyer status shortly after take-off, but not soon enough to have redeemed the rewards for that particular flight. 
 
-I am imagining scores of real-world scenarios in the field of parametric (parameter based) insurance (and other parametric services); partly harvested crops, health insurance and much more. In my mind it boils down to the fact that Business analysts (and other professionals who create policies, models and contracts) work at a very high level of abstraction. On the other hand, developers and engineers work at an extremely niche level; writing and building decentralized infrastructure. The Rules Engine approach allows the high level business logic to seamlessly make its way into the decentralized application (DApp) layer.
+I am imagining scores of real-world scenarios in the field of parametric (parameter based) insurance (and other parametric services); partly harvested crops, health insurance and much more. In my mind it boils down to the fact that Business analysts (and other professionals who create policies, models and contracts) work at a very high level of abstraction. On the other hand, blockchain developers and engineers work at an extremely niche level; writing and building decentralized infrastructure. The Rules Engine approach allows the high level business logic to seamlessly make its way into the decentralized application (DApp) layer.
 
-All in all EDCON2019 was a highly productive, yet friendly and relaxed community event.
+All in all, EDCON2019 was a highly productive, yet friendly and relaxed community event.
 
