--- a/content/post/20190419-edcon.md
+++ b/content/post/20190419-edcon.md
@@ -38,7 +38,9 @@ These points are all part of a new school of safe-under-asynchrony BFT consensus
 
 ### Ethereum 2.0 validators
 
-The roles and responsibilities of an Ethereum 2.0 validator became more and more apparent as the presentations went on. For example, becoming a validator requires a deposit of 32ETH (deposited to the appropriate contract on the main Ethereum 1.0 chain). Once the 32 ETH has been confirmed, the validator begins their life on the beacon chain. The beacon chain, which is the system chain for Ethereum 2.0, is where validators live, where random numbers are generated, where deposits are held and where slashing occurs. Once a validator is chosen (using pseudo random sampling) they serve on the beacon chain for approximately 2 weeks. These validators take on responsibilities to, amongst other things, propose valid Ethereum 2.0 blocks, create crosslinks (communications between sharded chains) and vote on correct cross shard links.
+The roles and responsibilities of an Ethereum 2.0 validator became more and more apparent as the presentations went on. For example, becoming a validator requires a deposit of 32ETH (deposited to the appropriate contract on the main Ethereum 1.0 chain). Once the 32 ETH has been confirmed, the validator begins their life on the beacon chain. The beacon chain, which is the system chain for Ethereum 2.0, is where validators live, where random numbers are generated, where deposits are held and where slashing occurs. 
+
+Once a validator is chosen (using pseudo random sampling) they serve on the beacon chain for approximately 2 weeks. These validators take on responsibilities to, amongst other things, propose valid Ethereum 2.0 blocks, create crosslinks (communications between sharded chains) and vote on correct cross shard links.
 
 ### Ethereum 2.0 validator rewards and penalties
 
@@ -54,11 +56,17 @@ Most of the presentations also referenced the Ethereum 2.0 roadmap. Specifically
 
 > The Phase 0 implementation is scheduled for Q4 of 2019. 
 
-The reason for the phased implementation of Ethereum 2.0 is to allow developers, testers and the community to take a more conservative approach. For example Phase 0 implements the beacon chain but does not facilitate externally owned user accounts or any user activity whatsoever. Similarly, Phase 1 (which will of course come after Phase 0) will introduce sharded chains, but with test data only. Again, no user accounts or user activity. It is expected that the Phase 2 implementation of Ethereum 2.0 will eventually add accounts, smart contracts and so forth.
+The reason for the phased implementation of Ethereum 2.0 is to allow developers, testers and the community to take a more conservative approach. For example Phase 0 implements the beacon chain but does not facilitate externally owned user accounts or any user activity whatsoever. 
+
+Similarly, Phase 1 (which will of course come after Phase 0) will introduce sharded chains, but with test data only. Again, no user accounts or user activity. It is expected that the Phase 2 implementation of Ethereum 2.0 will eventually add accounts, smart contracts and so forth.
 
 ### Ethereum 2.0 clients
 
-Preston Van Loon, Co-founder & Tech lead at Prysmatic Labs, gave an excellent presentation entitled "How to Build a Production-ready Ethereum 2.0 Client". Whilst it was originally thought that the existing Ethereum 1.0 clients could be updated/upgraded, developers have since learned that the Ethereum 2.0 clients have to be written from the ground up. One of the upsides of this fresh approach, is that developers can now entertain completely new ideas without worrying about how they would have to integrate with existing Ethereum 1.0 clients. One of the challenges which this brings however, is that eventually all of these different new clients will need to align from an interoperability standpoint.
+Preston Van Loon, Co-founder & Tech lead at Prysmatic Labs, gave an excellent presentation entitled "How to Build a Production-ready Ethereum 2.0 Client". Whilst it was originally thought that the existing Ethereum 1.0 clients could be updated/upgraded, developers have since learned that the Ethereum 2.0 clients have to be written from the ground up. 
+
+One of the upsides of this fresh approach, is that developers can now entertain completely new ideas without worrying about how they would have to integrate with existing Ethereum 1.0 clients. 
+
+One of the challenges which this brings however, is that eventually all of these different new clients will need to align from an interoperability standpoint.
 
 > Over 100 people, from all over the world, are currently contributing to the development of almost a dozen different Ethereum 2.0 clients
 
@@ -96,7 +104,7 @@ Dr Yuan gave many examples of the usefulness of rules engines. Perhaps the simpl
 
 The rules engine provides a succinct solution (for non-programmers) which is easy to write, comprehend and maintain. The rules engine is robust. Once deployed, the rules engine employs the Rete algorithm; a pattern matching algorithm which is used to determine the correct order of rule execution.
 
-### Ethereum community collaboration
+### Ethereum community collaboration 
 
 I was fortunate enough to sit with Hayden Adams (the creator of Uniswap) and discuss one of my recent ideas. The idea is to store multiple values inside a single uint256 integer. 
 
