--- a/content/post/20190419-edcon.md
+++ b/content/post/20190419-edcon.md
@@ -4,7 +4,7 @@ date: 2019-04-19T01:01:23+08:00
 draft: false
 tags: ["Ethereum", "conference", "eth2.0", "EDCON", "development"]
 categories: ["Ethereum"]
-author: "Timothy McCallum"
+author: "Timothy McCallum in collaboration with Michael Yuan"
 ---
 
 ## EDCON2019
@@ -70,11 +70,24 @@ One of the challenges which this brings however, is that eventually all of these
 
 > Over 100 people, from all over the world, are currently contributing to the development of almost a dozen different Ethereum 2.0 clients
 
-It was really great to see so many different projects presenting so many different ideas. The community engagement and collaboration was a good fit for SecondState. There was an overriding focus on providing innovative blockchain solutions. Dr Yuan demonstrated how SecondState can achieve new heights, providing solutions which are performant, yet still safe and user friendly. 
+It was really great to see so many different projects presenting so many different ideas. The community engagement and collaboration was a good fit for Second State. There was an overriding focus on providing innovative blockchain solutions. Dr Yuan demonstrated how SecondState can achieve new heights, providing solutions which are performant, yet still safe and user friendly. 
 
-### Dr Yuan
+### How about Ethereum 1.x?
 
-Our very own Dr Yuan gave an engaging presentation which explained how Lity (an extension of Solidity) provides unprecedented features to blockchain programming. 
+It is clear that Ethereum 2.0 is still months (or maybe even years) away from being useful. However, that does not mean current Ethereum users and developers are stuck with outdated and slow technology for a long period of time. Many innovations for Ethereum 2.0 are coming to fruition in today's Ethereum blockchain. For example,
+
+* One of the most common discussion topics throughout the conference is layer 2 networks. Layer 2 networks could scale the current Ethereum blockchain to tens of thousands of transactions per second (TPS). While various implementation efforts of Plasma clearly have the most mindshare, other solutions ranging from Liquidity Network to Celer Networks are debated and discussed in depth in the conference halls.
+
+* New developer tools are being created to improve Ethereum user and developer experience. Examples I found particularly interesting include the Embark Framework for integrated DApp development and deployment (see below), Amberdata for blockchain data visualization and query services, and Tokenscript for automated token related operations in wallet applications. Developer tools is also a focus of innovation for the Second State and Lity project. Stay tuned.
+
+* On-chain applications that store the entire application data on the blockchain are becoming part of the standard Ethereum infrastructure ([see our previous article on this topic](/post/20190319-lean/)). That is especially true for Defi (Decentralized Finance) applications such as Uniswap, Kyber Network, and MakerDAO. For instance, since its launch 6 months ago, Uniswap now has $10M worth of ETH locked in liquidity pools, and reaches $2M in daily transactions. MakerDAO, on the other hand, has locked over $300M worth of ETHs in its deposit pools. Defi, including ERC220 toke contracts, could well be the standard infrastructure of Ethereum.
+
+* Ethereum core developer Lane Rettig gave a talk on Ethereum 1.x roadmap. He discussed many interesting improvements that will happen on the current PoW Ethereum blockchain, including language improvements to Solidity and Vyper, as well as the new intermeidate language between Solidity and the bytecode in preparartion for Ethereum 2.0's new eWASM (Ethereum flavored WebAssembly) Virtual Machine. Those improvements will make the Ethereum platform more useable and performant in the virtual machine layer. Again, this is area where the Second State is looking to make active contributions to the community (see below). 
+
+
+### Lity and Second State
+
+Our very own Dr. Yuan gave an engaging presentation which explained how Lity (an extension of Solidity) provides unprecedented features to blockchain programming. 
 
 ![](/images/20190419-edcon-04.jpg)
 
@@ -154,6 +167,10 @@ Originally released in 2015, [Embark](https://embark.status.im/) is an Ethereum 
 #### Ethereum Classic Labs
 
 Ethereum Classic Labs gave a great presentation which introduced me to a clever project called [Open RPC](https://github.com/open-rpc/spec). In my view, this project will help to provide a ubiquitous communication protocol which will greatly improve the Ethereum DApp development environment. Ethereum Classic Labs also offer [incubator programs](https://etclabs.org/program/) to provide startups with funding. There seemed to be an overriding message that whilst most development is created by the Ethereum Classic Labs **(ETC)**, it is intended to be used by the wider Ethereum **(ETH)** community.
+
+#### Ethereum Cat Herder
+
+The Ethereum Cat Herder project is an effort to provide decentralized project management support for a large collaboration like Ethereum. The speaker recalled early days of Ethereum when decisions are centralized and funds were spent carelessly, much like many crypto projects today. The evolution of Ethereum into a highly organized project with many conflicting stakeholders is testmony to the power of the community, and serves as a good example for other projects that follow it.
 
 #### Virgil Griffith - Parametric insurance (insurance based on a measurable condition)
 
