Small text change

--- a/content/post/20190419-edcon.md
+++ b/content/post/20190419-edcon.md
@@ -129,7 +129,7 @@ The logic behind this idea is as follows. A single uint256 data slot can store a
 ((_value % (10 ** _position)) - (_value % (10 ** (_position - _size)))) / (10 ** (_position - _size));
 ```
 
-I also very briefly ran this idea past Vitalik, during one of the breaks, and was pleased to hear that this pattern could be implemented in not just Solidity but also in Ethereum's Vyper programming language. 
+I also very briefly ran this idea past Vitalik, showing him my pseudo code during one of the breaks, and was pleased to hear that this pattern could be implemented in not just Solidity but also in Ethereum's Vyper programming language. 
 
 There was more than enough room at EDCON2019 for developers to sit down and code so I took a small window of opportunity to write and test the design in both Solidity and Vyper.
 
