--- a/content/post/20180105-pos.md
+++ b/content/post/20180105-pos.md
@@ -94,7 +94,7 @@ The history of Casper [6] has spanned many years, trails have been blazed, yet t
 
 ![](/images/20180105-pos-06.png)
 
-I endeavor to return with a follow up (second part) to this article, once I become a full validating node on the alpha Casper FFG testnet. If you would like an update, you can follow the [Second State publication](wwww.secondsate.io).
+I endeavor to return with a follow up (second part) to this article, once I become a full validating node on the alpha Casper FFG testnet. If you would like an update, you can follow the [Second State publication](https://www.secondstate.io/).
 
 References
 
