--- a/content/post/20191029-EWASM.md
+++ b/content/post/20191029-EWASM.md
@@ -151,7 +151,8 @@ This challenging task was completed (as a prototype for demonstration purposes) 
 ## Crosslink (October 2019)
 
 ![](/images/20191029-EWASM-11.png)
-Picture: SecondState's Hung-Ying Tai receiving an Ethereum Foundation Grant for the Soll compiler project (pictured with Vitalik Buterin at the Crosslink Taipei event).
+
+Picture: SecondState's Hung-Ying Tai receiving an Ethereum Foundation Grant for the [Soll compiler project](https://blog.secondstate.io/post/20191022-soll-compiler-project/) (pictured with Vitalik Buterin at the Crosslink Taipei event).
 
 ## Devcon5 (October 2019)
 For those who were not at Devcon5, the following video provides an overview of Soll’s operation. Namely deploying and interacting with an Ethereum ERC20 Solidity smart contract on the new [Ethereum Ewasm testnet](http://ewasm.ethereum.org/).
