--- a/content/post/20191106-Ewasm-zh.md
+++ b/content/post/20191106-Ewasm-zh.md
@@ -1,5 +1,5 @@
 ---
-title: "Ewasm VS EVM：使用 Ewasm 效能真的会比较快吗"
+title: "Ewasm Vs EVM：Ewasm 带来了什么改变？"
 date: 2019-11-06T09:42:14+08:00
 draft: false
 tags: ["blockchain", "Ethereum", "Devcon5","libra","Uniswap"]
@@ -10,7 +10,7 @@ categories: ["ethereum","zh"]
 
 这篇文章是 Crosslink 2019 Taiwan 的一个议程纪录：The next generation Ethereum Virtual Machine，由来自[Second State](https://www.secondstate.io/) 的工程VP Hung-Ying Tai（hydai） 分享 Ewasm VM 目前研究内容及未来的方向，内容非常精彩，包含了 EVM bytecode 、Webassembly、Ewasm1.0 以及 Ewasm2.0 。
 
-## EVM bytecode 及 Webassembly（WASM）
+## EVM bytecode 及Webassembly（WASM）
 
 以太坊的智能合约交易在执行时，例如：把Token 转到别的地址，是将EVM bytecode 读进以太坊的虚拟机执行，而 EVM bytecode 有以下几点特色：
 
