--- a/content/post/20191106-ewasm-en.md
+++ b/content/post/20191106-ewasm-en.md
@@ -103,17 +103,17 @@ Ewasm 2.0 is still under study. The following slide is the direction of the rese
 
 ## Reference
 
-[Crosslink 简报](http://url.hyd.ai/LRFVT)
-[webassembly.org (http://webassembly.org/)](https://webassembly.org/)
-[Scout](https://github.com/ewasm/scout)
-[Second State’s Soll Compiler](https://github.com/second-state/soll)
-[Compiling and deploying an ERC20 contract onto the eWASM testnet— YouTube](https://www.youtube.com/watch?v=X-A6sP_HTy0)
-[Ewasm overview and the precompile problem: Alex Beregszaszi and Casey Detrio @ Ethereum \\\\ Part 1 — YouTube](https://www.youtube.com/watch?v=YW6hszjjMqo&feature=youtu.be)
-[Ewasm overview and the precompile problem: Alex Beregszaszi and Casey Detrio @ Ethereum \\\\ Part 2 — YouTube](https://www.youtube.com/watch?v=a9hbycBMr_A)
-[Wasm for blockchain&Eth2 execution: Paul Dworzanski,Alex Beregszaszi,Casey Detrio@Ethereum \\\\ Part 2 — YouTube](https://www.youtube.com/watch?v=iwU10WkWSBY)
-[Ewasm for sharding](https://drive.google.com/file/d/19t4qCqEK2RPt0p1XYx-a2FdZSAlCq7H0/view)
-[Ewasm updates](https://drive.google.com/file/d/1CRc0qBQTebNKw7NRZXzxbHovrigW0bqf/view)
-[Ewasm design](https://github.com/ewasm/design)
-[wasm-intro](https://rsms.me/wasm-intro)
+1.[Crosslink 简报](http://url.hyd.ai/LRFVT)
+2.[webassembly.org (http://webassembly.org/)](https://webassembly.org/)
+3.[Scout](https://github.com/ewasm/scout)
+4.[Second State’s Soll Compiler](https://github.com/second-state/soll)
+5.[Compiling and deploying an ERC20 contract onto the eWASM testnet— YouTube](https://www.youtube.com/watch?v=X-A6sP_HTy0)
+6.[Ewasm overview and the precompile problem: Alex Beregszaszi and Casey Detrio @ Ethereum \\\\ Part 1 — YouTube](https://www.youtube.com/watch?v=YW6hszjjMqo&feature=youtu.be)
+7.[Ewasm overview and the precompile problem: Alex Beregszaszi and Casey Detrio @ Ethereum \\\\ Part 2 — YouTube](https://www.youtube.com/watch?v=a9hbycBMr_A)
+8.[Wasm for blockchain&Eth2 execution: Paul Dworzanski,Alex Beregszaszi,Casey Detrio@Ethereum \\\\ Part 2 — YouTube](https://www.youtube.com/watch?v=iwU10WkWSBY)
+9.[Ewasm for sharding](https://drive.google.com/file/d/19t4qCqEK2RPt0p1XYx-a2FdZSAlCq7H0/view)
+10.[Ewasm updates](https://drive.google.com/file/d/1CRc0qBQTebNKw7NRZXzxbHovrigW0bqf/view)
+11.[Ewasm design](https://github.com/ewasm/design)
+12.[wasm-intro](https://rsms.me/wasm-intro)
 
-Translated from traditional Chinese https://medium.com/taipei-ethereum-meetup/the-next-generation-ethereum-virtual-machine-ewasm-vm-2fe3fd9b94a4
+Translated from [traditional Chinese](https://medium.com/taipei-ethereum-meetup/the-next-generation-ethereum-virtual-machine-ewasm-vm-2fe3fd9b94a4) by Ethereum Taipei 
