--- a/content/post/20200216-soll-en.md
+++ b/content/post/20200216-soll-en.md
@@ -12,9 +12,9 @@ categories: ["en"]
 
 Founded at ConsenSys, Panvala provides funding support for critical software development efforts in the Ethereum ecosystem. Past Panvala grant awardees include Sigma Prime, Prysmatic Labs, MakerDAO, Aragon, Status, and Gitcoin.
 
-Prior to the Panvala grant, Second State is already a recognized leader in Ethereum infrastructure development. It is had received funding and prizes from both [the Ethereum Foundation](https://medium.com/wasm/second-state-receives-a-prestigious-award-from-the-ethereum-foundation-for-the-soll-compiler-5fb3c3eb21fc?source=collection_home---5------7-----------------------) and Ethereum Classic Labs. 
+Prior to the Panvala grant, Second State is already a recognized leader in Ethereum infrastructure development. It is had received funding and grants from both [the Ethereum Foundation](https://medium.com/wasm/second-state-receives-a-prestigious-award-from-the-ethereum-foundation-for-the-soll-compiler-5fb3c3eb21fc?source=collection_home---5------7-----------------------) and Ethereum Classic Labs. 
 
-Panvala awarded [Second State’ SOLL compiler project](https://github.com/second-state/SOLL) for critical tooling support for Ethereum 2.0. SOLL is the *world’s first* toolchain that compiles Solidity smart contracts into WebAssembly bytecode and successfully deploys onto Ethereum Foundation’s official Ewasm (Ethereum flavored WebAssembly) testnet. Prior to SOLL, there were no easy tools to compile and deploy Solidity smart contracts to Ewasm-based blockchains. SOLL completes the [missing toolchain for Ewasm](https://github.com/second-state/SOLL), and is a key infrastructure for Ethereum 2.0.
+Panvala awarded [Second State’s SOLL compiler project](https://github.com/second-state/SOLL) for critical tooling support for Ethereum 2.0. SOLL is the *world’s first* toolchain that compiles Solidity smart contracts into WebAssembly bytecode and successfully deploys onto Ethereum Foundation’s official Ewasm (Ethereum flavored WebAssembly) testnet. Prior to SOLL, there were no easy tools to compile and deploy Solidity smart contracts to Ewasm-based blockchains. SOLL completes the [missing toolchain for Ewasm](https://github.com/second-state/SOLL), and is a key infrastructure for Ethereum 2.0.
 
 The Second State team released [the 0.0.5 version of the SOLL compiler](https://github.com/second-state/SOLL/releases) in January 2020. This release adds support for the YUL intermediate language, enabling multiple language front ends such as Solidity and Vyper to be compiled into Ewasm targets. Currently, SOLL supports the basic functions of YUL, such as basic arithmetic, comparison, storage, and loading of built-in functions. With support from Panvala, it will continue to evolve and aim to support the full Ethereum language specifications in the next several months!
 
