--- a/content/post/20180105-pos.md
+++ b/content/post/20180105-pos.md
@@ -1,7 +1,7 @@
 ---
 title: "First impressions of Ethereum’s Casper — Proof of Stake (PoS)"
 date: 2018-01-05T01:01:23+08:00
-draft: false
+draft: true
 tags: ["Ethereum", "PoS", "eth2.0"]
 categories: ["Ethereum"]
 author: "Timothy McCallum"
