--- a/content/post/20191031-SFBW-zh.md
+++ b/content/post/20191031-SFBW-zh.md
@@ -1,7 +1,7 @@
 ---
 title: "Second State(第二形科技) 亮相世界级区块链技术盛会旧金山区块链周"
 date: 2019-10-31T20:01:23+08:00
-draft: false
+draft: true
 tags: ["SFBW", "Second State", "BUIDL"]
 categories: ["zh"]
 ---
