--- a/content/post/20200216-soll-en.md
+++ b/content/post/20200216-soll-en.md
@@ -1,7 +1,7 @@
 ---
 title: "Second State receives another grant award for the SOLL compiler"
 date: 2020-02-14T20:01:23+08:00
-draft: false
+draft: true
 tags: ["ewasm","soll","Solidity","Vyper","Ethereum","Smart Contract"]
 categories: ["en"]
 ---
