--- a/content/post/20200217-soll-zh.md
+++ b/content/post/20200217-soll-zh.md
@@ -1,7 +1,7 @@
 ---
 title: "Second State 又获以太坊生态体系的资助奖励"
 date: 2020-02-16T20:01:23+08:00
-draft: false
+draft: true
 tags: ["ewasm","soll","Solidity","Vyper","Ethereum","Smart Contract"]
 categories: ["zh"]
 ---
